To fix overlap of task name and task number and to modify the condition of unassign task.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -619,12 +619,12 @@ body {
 .assignedTask {
 	cursor: pointer;
     font-size: 17px;
-    padding: 0px 1px 10px;
+    padding: 0px 0px 10px;
     display: inline-block;
-    width: 60%;
+    width: 57%;
     word-break: break-all;
     word-wrap: break-word;
-    margin-left: 26px;
+    margin-left: 40px;
 }
 
 .assignedTaskInner {
